helloworld-chart/template.yaml
---
# Source: helloworld-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-helloworld-chart
  labels:
    helm.sh/chart: helloworld-chart-0.1.0
    app.kubernetes.io/name: helloworld-chart
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: helloworld-chart
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: helloworld-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-helloworld-chart
  labels:
    helm.sh/chart: helloworld-chart-0.1.0
    app.kubernetes.io/name: helloworld-chart
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: helloworld-chart
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helloworld-chart
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-helloworld-chart
      securityContext:
        {}
      containers:
        - name: helloworld-chart
          securityContext:
            {}
          image: "sohrabkhan/python-helloworld:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: helloworld-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: RELEASE-NAME-helloworld-chart
  labels:
    helm.sh/chart: helloworld-chart-0.1.0
    app.kubernetes.io/name: helloworld-chart
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: equal-experts-helloworld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-helloworld-chart
                port:
                  number: 8080
---
# Source: helloworld-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-helloworld-chart-test-connection"
  labels:
    helm.sh/chart: helloworld-chart-0.1.0
    app.kubernetes.io/name: helloworld-chart
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['RELEASE-NAME-helloworld-chart:80']
  restartPolicy: Never
